--- a/src/pages/Search/SongSearch/Search.css
+++ b/src/pages/Search/SongSearch/Search.css
@@ -1,5 +1,9 @@
 .search-page {
     min-height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .search-bar {
@@ -11,13 +15,14 @@
     padding: 8px 3px;
     gap: 5px;
     background-color: rgba(255, 255, 255, 0.067);
+    width: 60%;
 }
 
 .search-bar input {
     height: 100%;
     background-color: transparent;
     border: none;
-    width: 400px;
+    flex-grow: 1;
     padding: 0 5px;
 }
 
@@ -83,5 +88,31 @@
 
 .dropdown-list:not(.show) {
     padding: 0;
+}
+
+.results {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    margin-top: 50px;
+    width: 70%;
+    align-items: center;
+}
+
+.result-tile {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    width: 50%;
+    color: white;
+}
+
+.result-text {
+    flex-grow: 1;
+    align-self: center;
+}
+
+.result-tile img {
+    height: 120px;
 }
 
