--- a/src/pages/Account/CreateAccount.css
+++ b/src/pages/Account/CreateAccount.css
@@ -1,8 +1,30 @@
+.create-account-page {
+    min-height: 100vh;
+}
+
 .account-creation-steps {
     display: flex;
     justify-content: center;
 }
 
 .MuiStepLabel-label {
-    color: white;
+    color: black;
+}
+
+.Mui-active.css-1hv8oq8-MuiStepLabel-label  {
+    color: white !important;
+}
+
+.Mui-completed.css-1hv8oq8-MuiStepLabel-label {
+    color: gray !important;
+}
+
+.step-details-container {
+    min-height: 55vh;
+}
+
+.step-movement {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 30%;
 }
