--- a/src/components/AccountCreationSteps/steps.css
+++ b/src/components/AccountCreationSteps/steps.css
@@ -8,3 +8,11 @@
     width: 200px;
     margin-bottom: 20px;
 }
+
+.create-account-form {
+    display: flex;
+    flex-direction: column;
+    min-height: 55vh;
+    justify-content: space-between;
+}
+
